--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,8 @@ project(linalg)
 set(CMAKE_CXX_STANDARD 17)
 
 add_library(linalg
-        main.cpp
-        Matrix.tpp
-        Matrix.h)
+        src/Matrix.cpp
+        include/Matrix.h)
 add_executable(linalg_test main.cpp
-        Matrix.tpp
-        Matrix.h)
+        src/Matrix.cpp
+        include/Matrix.h)
